Stop blockquotes bleeding into doc page TOCs
Blockquotes at the beginning of chapters, like in each of the storage
chapters (numbers 15-17 atm), overlapped with the table-of-contents
that floats at the top-right of the chapter page.  This commit allows
blockquote widths to shrink in cases where it previously forced 100%
width and bled into TOCs.

--- a/docs/static/css/titandocs.css
+++ b/docs/static/css/titandocs.css
@@ -24,6 +24,9 @@ table th,.project-content .project-info h4,
 font-family:"Open Sans", Arial, Helvetica, sans-serif !important;
 }
 
+table.blockquote {
+    width: auto !important;
+}
 
 .footer-area  h3,#slidingbar-area  h3{
 font-family:"Open Sans", Arial, Helvetica, sans-serif !important;
